corrected tree diagram images

--- a/index.html
+++ b/index.html
@@ -896,6 +896,9 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 <div class="paragraph">
 <p>To change the color scheme for plain text documents and code, click the “Edit” button within the menu bar and navigate to “Preferences &gt; Plain Text and Code,” then adjust the Style Scheme option. To change the color scheme of Rich Text documents, click “Edit”, navigate to “Preferences &gt; Rich Text” and adjust the Theme settings.</p>
 </div>
+<div class="paragraph">
+<p>Additional settings are available in the "View" menu.</p>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -1112,18 +1115,18 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 <h2 id="_nodes">Nodes</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>In computer science, a tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <a href="#figure-5.01">Figure 5.01</a>, "my_book.ctb" is the root node. "Part 1" is one of the three child nodes that belong to "my_book.ctb" and is also the parent node of "Chapter 1", "Chapter 2", and "Chapter 3".</p>
+<p>In computer science, a tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <a href="#figure-5.01">Figure 5.01</a>, "my_book" is the root node. "Part 3" is one of three child nodes that belong to "my_book" and is also the parent node of "Chapter 6".</p>
 </div>
 <div id="figure-5.01" class="paragraph">
 <div class="title">Figure 5.01</div>
-<p><span class="image"><img src="images/binary_tree.png" alt="Binary tree."></span></p>
+<p><span class="image"><img src="images/tree_diagram.png" alt="Tree diagram."></span></p>
 </div>
 <div class="paragraph">
 <p><a href="#figure-5.01">Figure 5.01</a> might look like <a href="#figure-5.02">Figure 5.02</a> in Cherrytree, where the document name is the root node.</p>
 </div>
 <div id="figure-5.02" class="paragraph">
 <div class="title">Figure 5.02</div>
-<p><span class="image"><img src="images/binary_tree_demo.png" alt="Binary tree demo."></span></p>
+<p><span class="image"><img src="images/tree_demo.png" alt="Tree demo."></span></p>
 </div>
 <div class="paragraph">
 <p>Content</p>
