small additions to file section and others

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ possible.</p>
 <div class="sect3">
 <h4 id="_writing">Writing</h4>
 <div class="paragraph">
-<p>The web version of the Cherrytree user manual is written using <a href="https://asciidoctor.org/">asciidoctor</a> and is maintained <a href="https://github.com/EllieBorden/Cherrytree-Manual">here</a>. Contributors can help with writing and proofing, or by porting the manual to a ".ctb" file intended to demonstrate the potential of Cherrytree.</p>
+<p>The web version of the Cherrytree user manual is written using <a href="https://asciidoctor.org/">asciidoctor</a> and is maintained <a href="https://github.com/EllieBorden/Cherrytree-Manual">here</a>. Contributors can help with writing and proofing, or by porting the manual to a ".ctb" file, intended to demonstrate the potential of Cherrytree. Writing critiques are also encouraged.</p>
 </div>
 </div>
 <div class="sect3">
@@ -900,7 +900,7 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 <p><span class="image"><img src="images/view-menu.png" alt="View menu options."></span></p>
 </div>
 <div class="paragraph">
-<p>The size of the toolbar icons is increased within <a href="#figure-3.01">Figure 3.01</a>. Icon size can be increased by selecting “Increase Toolbar Icon Size” or decreased with the “Decrease Toolbar Icon Size” option.</p>
+<p>The size of the toolbar icons is enlarged within <a href="#figure-3.01">Figure 3.01</a>. Icon size can be increased by selecting “Increase Toolbar Icon Size” or decreased with the “Decrease Toolbar Icon Size” option.</p>
 </div>
 </div>
 </div>
@@ -1026,7 +1026,7 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </div>
 </li>
 <li>
-<p>If this is your first time saving the current document, you will be prompted to select a save type, as shown in <a href="#figure-3.10">Figure 3.10</a>. If you are unsure which type to select, please visit the <a href="#_saving">save section</a> for more details.<br></p>
+<p>If this is your first time saving the current document, you will be prompted to select a save type, as shown in <a href="#figure-3.10">Figure 3.10</a>. If you are unsure which type to select, please visit the <a href="#_save_type">save type section</a> for more details.<br></p>
 <div id="figure-3.10" class="paragraph">
 <div class="title">Figure 3.10</div>
 <p><span class="image"><img src="images/save02.png" alt="Save type selection menu."></span></p>
@@ -1101,7 +1101,60 @@ Reference the <a href="https://github.com/giuspen/cherrytree/blob/master/changel
 </div>
 <div class="sect2">
 <h3 id="_saving">Saving</h3>
+<div class="sect3">
+<h4 id="_saving_to_the_same_file">Saving to the same file</h4>
+<div class="olist arabic">
+<ol class="arabic" start="1">
+<li>
+<p>You can save your document by holding "Ctrl" and pressing "s" or clicking "File" within the menu bar and selecting the "Save" option, as shown in <a href="#figure-4.04">Figure 4.04</a>.<br></p>
+<div class="paragraph">
+<p>If you have previously saved the current document, you do not need to perform steps 2 and 3.<br></p>
+</div>
+<div id="figure-4.04" class="paragraph">
+<div class="title">Figure 4.04</div>
+<p><span class="image"><img src="images/save01.png" alt="File menu" width="save."></span></p>
+</div>
+</li>
+<li>
+<p>If this is your first time saving the current document, you will be prompted to select a save type, as shown in <a href="#figure-4.05">Figure 4.05</a>. If you are unsure which type to select, please visit the <a href="#_save_types">save section</a> for more details.<br></p>
+<div id="figure-4.05" class="paragraph">
+<div class="title">Figure 4.05</div>
+<p><span class="image"><img src="images/save02.png" alt="Save type selection menu."></span></p>
+</div>
+</li>
+<li>
+<p>After you have selected a type, give your document a name and select a folder to save it to. <a href="#figure-4.06">Figure 4.06</a><br></p>
+<div id="figure-4.06" class="paragraph">
+<div class="title">Figure 4.06</div>
+<p><span class="image"><img src="images/save03.png" alt="Windows save as menu."></span></p>
+</div>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_saving_to_a_new_file">Saving to a new file</h4>
 
+</div>
+<div class="sect3">
+<h4 id="_save_types">Save Types</h4>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>SQLite:</strong></p>
+</li>
+<li>
+<p><strong>XML:</strong></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_password_protection">Password Protection</h4>
+<div class="paragraph">
+<p><strong>NOTE:</strong> Password-protected files are compressed and locked with <a href="https://www.7-zip.org/">7zip</a>, an open source file archiver. Other applications might not provide functionality to unlock files that have been locked by Cherrytree.</p>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_printing">Printing</h3>
